<resources>
    <string name="app_name">gpa_alshammarit1_calculator2</string>
    <string name="TextView">GPA CALCULATOR</string>
    <string name="TextView1">Course A:</string>
    <string name="TextView2">Course B:</string>
    <string name="TextView3">Course C:</string>
    <string name="TextView4">Course D:</string>
    <string name="TextView5">Course E:</string>
    <string name="TextView6">GPA:</string>
    <string name="Button"> Compute GPA</string>



</resources>