
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6CBCB">


    <TextView
        android:id="@+id/t"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="579dp"
        android:background="#90BFC3"
        android:text="@string/TextView"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="286dp"
        android:layout_marginBottom="518dp"
        android:text="@string/TextView1" />

    <EditText
        android:id="@+id/c1"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="514dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="463dp"
        android:text="@string/TextView2" />

    <EditText
        android:id="@+id/c2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="452dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="402dp"
        android:text="@string/TextView3" />

    <EditText
        android:id="@+id/c3"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="396dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="348dp"
        android:text="@string/TextView4" />

    <EditText
        android:id="@+id/c4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:inputType="number"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="285dp"
        android:text="@string/TextView5" />

    <EditText
        android:id="@+id/c5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="278dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="205dp"
        android:text="@string/TextView6"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/gpa"
        android:layout_width="192dp"
        android:layout_height="84dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="170dp"
        android:background="#F4F1F1"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bb"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="112dp"
        android:text="@string/Button" />


</RelativeLayout>

